refactor: Http11QueryParser Stream 이용한 코드로 변경